fixed page jumping - DEVELOPER-288

--- a/stylesheets/app.scss
+++ b/stylesheets/app.scss
@@ -73,7 +73,7 @@
 
 
 
-.clearfix:after {content: "."; display: block; clear: both; visibility: hidden; line-height: 0; height: 0; } .clearfix {display: inline-block; } html[xmlns] .clearfix {display: block; } * html .clearfix {height: 1%; }
+.clearfix:after {visibility: hidden; display: block; font-size: 0; content: " "; clear: both; height: 0; } * html .clearfix             { zoom: 1; } /* IE6 */ *:first-child+html .clearfix { zoom: 1; } /* IE7 */
 
 /*
    Zurb Foundation Overides
